# robotic_researcher

./: .gitignore  README.md  main.py  pyproject.toml
.github/: ci.yaml
bot_models/: base_bot.py  wikipedia_bot.py
tests/: test_main.py
tests/bot_models/: test_wikipedia_bot.py
utils/: string_utils.py
